feat(analytics): add campaign metrics with department heatmap
Add analytics dashboard showing campaign performance and department vulnerability.

- Add /api/campaigns/:id/analytics endpoint with department breakdown
- Add analytics page with Chart.js heatmap visualization
- Add View Metrics button to dashboard for each campaign
- Add comprehensive demo guide with step-by-step instructions
- Add database reset script for demos

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -168,6 +168,7 @@
                                             ${templates.map(t => `<option value="${t.id}">${t.name}</option>`).join('')}
                                         </select>
                                         <button class="btn" onclick="sendCampaign('${c.id}')">Send Campaign</button>
+                                        <a href="analytics.html?campaign_id=${c.id}" class="btn" style="background: #2196F3; border-color: #2196F3; text-decoration: none;">View Metrics</a>
                                     </td>
                                 </tr>
                             `).join('')}
